<resources>

    <string name="app_name" translatable="false">MyTag</string>

    <string name="number0" translatable="false">0</string>
    <string name="number1" translatable="false">1</string>
    <string name="number2" translatable="false">2</string>
    <string name="number3" translatable="false">3</string>
    <string name="number4" translatable="false">4</string>
    <string name="number5" translatable="false">5</string>
    <string name="number6" translatable="false">6</string>
    <string name="number7" translatable="false">7</string>
    <string name="number8" translatable="false">8</string>
    <string name="number9" translatable="false">9</string>
    <string name="number10" translatable="false">10</string>
    <string name="number11" translatable="false">11</string>
    <string name="number12" translatable="false">12</string>
    <string name="number13" translatable="false">13</string>
    <string name="number14" translatable="false">14</string>
    <string name="number15" translatable="false">15</string>
    <string name="numberEmpty" translatable="false"> </string>

    <string name="text_contentDescription" translatable="false">Image of application</string>
    <string name="text_creator" translatable="false">created by</string>

    <string name="tab_records">Records</string>
    <string name="tab_facts">Facts</string>
    <string name="tab_backgrounds">Backgrounds</string>
    <string name="tab_shapes">Shapes</string>

    <string name="toolbar_advance">MyTag. Advance</string>
    <string name="toolbar_setting">MyTag. Setting</string>

    <string name="spinner_default">Default</string>
    <string name="spinner_ru">Russian</string>
    <string name="spinner_en">English</string>
    <string name="spinner_pt">Portuguese</string>

    <string name="button_rules">Rules</string>
    <string name="button_ok">OK</string>
    <string name="button_to_game">Play</string>
    <string name="button_out_game">Out</string>
    <string name="button_start_game">Start</string>
    <string name="button_stop_game">End</string>
    <string name="button_shuffle">Shuffle</string>
    <string name="button_records">Records</string>
    <string name="button_settings">Settings</string>
    <string name="button_info">Info</string>
    <string name="button_rate_app">Rate app !</string>

    <string name="text_info_title">INFORMATION</string>
    <string name="text_snake">"SNAKE"</string>
    <string name="text_classic">"CLASSIC"</string>
    <string name="text_choose_background">"Choose background"</string>
    <string name="text_choose_tags">"Choose tags"</string>
    <string name="text_your_records">Best results:</string>
    <string name="text_game">game</string>
    <string name="text_level">size</string>
    <string name="text_move">move</string>
    <string name="text_your_move">Your moves:</string>
    <string name="text_steps_winner">Moves made:</string>
    <string name="text_end_game">You have completed the game !</string>
    <string name="text_its_easy">It\'s very easy… \nThe Angry Squirrel won\'t tell you anything!</string>
    <string name="text_3x3">"3x3"</string>
    <string name="text_4x4">"4x4"</string>
    <string name="text_no_fact">The facts have not yet been discovered by you.\nWin and discover information!</string>
    <string name="text_rules2">Depending on the type of game, the direction of movement when collecting matters:</string>
    <string name="text_fact_about">FACTS OF SQUIRRELS</string>
    <string name="text_info">Application <b>MyTag</b>  it is an information and entertainment project.
\nHere you will train your mind and learn a lot of interesting facts about funny squirrel animals!
\n\nApplication version: 1.1.1
\nDate: 2023
\nDeveloper: Belitski Marat
\nemail: belitski.dev@gmail.com</string>

    <string name="rules">RULES OF GAME \"TAG\":
\n\nBy moving the knuckles across the field, arrange them by numbers, preferably by doing,
\nas little movement as possible.
\n\nAt the end of the batches with the size of the 4x4 fields, you will be told an interesting fact about proteins!
\nYou will be able to discover 10 interesting facts for passing the SNAKE game type
and 10 facts for passing the CLASSIC game type!
\nIf you finish a batch of 3x3 sizes, then the harmful squirrel will not tell you anything - do not be offended by it!
\nWin and learn more interesting facts about animals!
\n\nThe playing field will be presented with randomly placed knuckles. Your task is to move the shapes
\nachieve the result shown below.
\nThe complexity of the game is affected by the size of the playing field.
\nThere are several types:
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>