<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none"
    android:padding="@dimen/padding"
    tools:context=".WinnerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:src="@drawable/angry_squirrel"
        android:contentDescription="@string/text_contentDescription"/>

        <FrameLayout
            android:id="@+id/l_answer_squirrel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_middle"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:id="@+id/b_text_squirrel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_normal"/>
        </FrameLayout>

    <TextView
        android:id="@+id/text_winner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/text_end_game"
        android:textSize="@dimen/size_text_big"/>

    <TextView
        android:id="@+id/text_count_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:text="@string/number1"
        android:textSize="@dimen/size_text_big"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:text="@string/text_fact_about"
        android:textSize="@dimen/size_text_big"/>

        <TextView
            android:id="@+id/t_fact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:textSize="@dimen/size_text_normal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/t_angry_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/padding"
            android:text="@string/text_its_easy"
            android:textSize="@dimen/size_text_big"
            android:visibility="gone" />

        <Button
        android:id="@+id/b_start_game"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:layout_gravity="center"
        android:background="@drawable/custom_buttons_start"
        android:onClick="startGame"
        android:padding="16dp"
        android:text="@string/button_to_game"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text_button"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/b_stop_game"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/padding"
        android:background="@drawable/custom_buttons_stop"
        android:onClick="finishGame"
        android:padding="16dp"
        android:text="@string/button_out_game"
        android:textColor="@color/white"
        android:textSize="@dimen/size_text_button"
        tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</ScrollView>