<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".support.InfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding"
        android:gravity="center"
        android:text="@string/text_info_title"
        android:textColor="@color/black"
        android:textSize="@dimen/size_text_big" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding"
        android:gravity="start"
        android:text="@string/text_info"
        android:textColor="@color/black"
        android:textColorLink="@color/blue"
        android:textSize="@dimen/size_text_normal"
        android:autoLink="email"/>

    <Button
        android:id="@+id/b_rate_app"
        android:layout_width="@dimen/width_button_main"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_buttons_info2"
        android:drawableStart="@android:drawable/btn_star_big_on"
        android:drawableEnd="@android:drawable/btn_star_big_on"
        android:onClick="goToPage"
        android:padding="@dimen/padding"
        android:text="@string/button_rate_app"
        android:textColor="@color/black"
        android:textSize="@dimen/size_text_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="horizontal">
    </LinearLayout>
</LinearLayout>